--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
+
+    repositories {
+        maven {
+            url "https://jitpack.io"
+        }
+    }
+
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
 
@@ -21,5 +28,12 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile project(':lib')
     compile 'com.android.support:appcompat-v7:23.0.1'
+}
+
+repositories {
+    maven {
+        url "https://jitpack.io"
+    }
 }
