--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="iiitd.ac.in.androidfaceproject" >
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -31,10 +36,15 @@
         <activity
             android:name=".PhotoEditor"
             android:label="@string/title_activity_photo_editor" >
-
         </activity>
-
-
+        <activity
+            android:name=".GoogleSignIn"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".Collage"
+            android:label="@string/title_activity_collage" >
+        </activity>
     </application>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
 </manifest>
