--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,17 @@
 apply plugin: 'com.android.application'
 
 android {
-
     repositories {
         maven {
             url "https://jitpack.io"
         }
     }
-
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
-
     defaultConfig {
         applicationId "iiitd.ac.in.androidfaceproject"
-        minSdkVersion 18
-        targetSdkVersion 23
+        minSdkVersion 21
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
@@ -24,13 +21,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':lib')
     compile 'com.android.support:appcompat-v7:23.0.1'
-	
     compile 'com.google.android.gms:play-services-plus:8.1.0'
     compile 'com.google.android.gms:play-services-location:8.1.0'
 }
