--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:name="MyApp"
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -44,6 +45,10 @@
         <activity
             android:name=".Collage"
             android:label="@string/title_activity_collage" >
+        </activity>
+        <activity
+            android:name=".MyApp"
+            android:label="@string/title_activity_application" >
         </activity>
     </application>
 
