--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.google.android.gms:play-services-plus:8.1.0'
     compile 'com.google.android.gms:play-services-location:8.1.0'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
 }
 
 repositories {
