--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,10 +42,17 @@
             android:name=".GoogleSignIn"
             android:label="@string/app_name" >
         </activity>
+
         <activity
-            android:name=".Collage"
+            android:name=".CollageMainActivity"
             android:label="@string/title_activity_collage" >
         </activity>
+
+        <activity
+            android:name=".DisplayCollageActivity"
+            android:label="@string/title_activity_display_collage">
+        </activity>
+
         <activity
             android:name=".MyApp"
             android:label="@string/title_activity_application" >
