--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-plus:8.1.0'
     compile 'com.google.android.gms:play-services-location:8.1.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
+    compile 'com.microsoft.projectoxford:face:0.5.0'
 }
 
 repositories {
