--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
     compile 'com.microsoft.projectoxford:face:0.5.0'
     compile project(':openCVLibrary300')
+    compile files('libs/faceppsdk.jar')
 }
 
 repositories {
