--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,19 +8,15 @@
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
 
     <application
+        android:name=".MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name="MyApp"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".test_sample"
@@ -33,6 +29,11 @@
         <activity
             android:name=".LandingPage"
             android:label="@string/title_activity_landing_page" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".PhotoEditor"
@@ -42,20 +43,31 @@
             android:name=".GoogleSignIn"
             android:label="@string/app_name" >
         </activity>
-
         <activity
             android:name=".CollageMainActivity"
             android:label="@string/title_activity_collage" >
         </activity>
-
         <activity
             android:name=".DisplayCollageActivity"
-            android:label="@string/title_activity_display_collage">
-        </activity>
+            android:label="@string/title_activity_display_collage" >
 
+        </activity>
+        <activity android:name=".CustomGalleryActivity" >
+            <intent-filter>
+                <action android:name="ACTION_PICK" />
+                <action android:name="ACTION_MULTIPLE_PICK" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MyApp"
             android:label="@string/title_activity_application" >
+        </activity>
+        <activity
+            android:name=".CollageFirst"
+            android:label="@string/title_activity_collage_first" >
+
         </activity>
     </application>
 
